# dual_vase_arms

./: .gitignore  .~lock.layout.pub#  README.md  config_loader.py  dual_print_log.csv  layout.pub  pyproject.toml  requirements.txt  run_simulation.py  test_simulated_log.csv  xarm8.urdf
config/: calibration.yaml  settings.yaml  settings.yaml.example  system.yaml
examples/: 01_cylinder.py  02_cone.py  03_lattice.py
gui/: control_panel.py  hardware_factory.py  main.py  mock_hardware.py
logs/: print_2026-05-10_14-54-01.csv  print_2026-05-12_11-32-55.csv
scripts/: calibrate.py  callibrate_new.py  control_panel.py  control_panel_old.py  control_panel_old_pre.py  control_panel_pre.py  cube40.3mf  cylinder_incremental.py  dual_print_demo.py  dual_spiral_demo.py  fullcontrol_sprial.py  gleadell_panel.py  home_all.py  panel_ui.py  planner.py  prepare_extruders.py  prepare_to_print.py  preview_split.py  print_circle.py  range_arms.py  range_box.py  ready_arms.py  slicer.py  slicer_tab.py  twin_dashboard.py  twin_demo.py
simulation/: code_tester.py  embedded_twin.py  primitive_arm.py  pybullet_scene.py  robot_models.py  scene_manager.py  state_provider.py  stl_tools.py  twin_launcher.py  twin_run.py  twin_shm.py  twin_viewer.py  web_server.py  zone_mesh.py
src/: __init__.py  arm_controller.py  arm_controller_pre.py  calibration.py  command_parser.py  coordinate_base.py  enum_reader.py  equaliser_flow.py  extruder_controller.py  logger.py  safe_zones.py  synchroniser.py  system_state.py  turntable_controller.py
templates/: dashboard.html
test/: __init__.py  (+8 more)
(+45 files in other folders)
